# marathon-matches-manager

./: .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
front-end/: package-lock.json  package.json  tsconfig.json  webpack.config.js
front-end/src/: index.html  index.tsx  sub-component.tsx
marathon_matches_manager/: __main__.py  const.py  generate_template.py  m3.py
marathon_matches_manager/lib/: __init__.py  const.py  environment.py
marathon_matches_manager/lib/contests/: __init__.py  fetch_contests.py  sort_contests.py
marathon_matches_manager/lib/misc/: __init__.py  const.py  environment.py  utils.py
marathon_matches_manager/lib/models/: __init__.py  command.py  config.py  contest.py
marathon_matches_manager/lib/models/config/: __init__.py  command.py  config.py  official_tools.py  project.py
marathon_matches_manager/lib/new/: __init__.py  ask_relate_contest.py  fetch_all_contest.py  fetch_detailed_contest.py  generate_m3_config.py  generate_project_config.py  generate_template.py
marathon_matches_manager/lib/official_tools/: __init__.py  setup_official_tools.py
marathon_matches_manager/lib/run/: __init__.py  exec_command.py
marathon_matches_manager/lib/test_solver/: __init__.py  case_generator.py  exec_test.py  model.py  visualize_result.py
marathon_matches_manager/lib/test_solver/case/: __init__.py  case_generator.py
marathon_matches_manager/lib/testcases/: __init__.py  generate_testcases.py
marathon_matches_manager/lib/tools/: setup_tools.py
marathon_matches_manager/lib/utils/: __init__.py  gen_seeds.py  utils.py
marathon_matches_manager/new/: generate_template.py  relate_contest.py
marathon_matches_manager/new/models/: contest.py
marathon_matches_manager/static/: bundle.js
marathon_matches_manager/templates/: index.html
marathon_matches_manager/utils/: text_styling.py
tests/: test_marathon_matches_manager.py
