[tool.poetry]
name = "marathon-matches-manager"
version = "0.1.0"
description = ""
authors = ["kryInit <kryinit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
m3 = "marathon_matches_manager.m3:main"
