# black
[tool.black]
line-length = 119

# adjust isort to black
[tool.isort]
profile = "black"
line_length = 119


# mypy
[[tool.mypy.overrides]]
module = "Levenshtein"
ignore_missing_imports = true


# poetry
[tool.poetry]
name = "marathon-matches-manager"
version = "0.1.1"
description = ""
authors = ["kryInit <kryinit@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
python-Levenshtein = "^0.12.2"
colorama = "^0.4.4"
types-colorama = "^0.4.8"
toml = "^0.10.2"
pydantic = "^1.10.5"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
injector = "^0.21.0"
logzero = "^1.7.0"
tqdm = "^4.66.1"
rich = "^13.5.2"
asciichartpy = "^1.5.25"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
mypy = "^0.931"
types-docopt = "^0.6.5"
black = "^22.1.0"
types-requests = "^2.27.10"
types-beautifulsoup4 = "^4.10.12"

[tool.poetry.group.dev.dependencies]
invoke = "^2.0.0"
types-toml = "^0.10.8.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
m3 = "marathon_matches_manager.__main__:main"
